@@ -14,6 +14,7 @@ class CancellablePointer;
 enum class CheckServerResult : uint_least8_t {
 	OK,
 	READ_ONLY,
+	AUTH_FAILED,
 	ERROR,
 };
 
